--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "*.{ts,vue}": "eslint --fix"
   },
   "dependencies": {
+    "@braks/revue-draggable": "0.4.3",
     "pinia": "^2.1.7",
-    "vue": "3.4.15"
+    "vue": "3.4.15",
+    "vue-facing-decorator": "^3.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.15",
@@ -34,6 +36,7 @@
     "husky": "^9.0.9",
     "lint-staged": "^15.2.1",
     "prettier": "^3.2.4",
+    "sass": "^1.70.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
