--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,7 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
+      - name: Prepare
+        run: |
+          git mv index.html.example index.html
+          
       - name: Set Node.js 18.x
         uses: actions/setup-node@v3
         with:
