--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -1,20 +1,22 @@
 {
-    "root": true,
-    "env": {
-      "browser": true,
-      "es2021": true,
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-recommended",
-      "eslint:recommended",
-      "@vue/typescript/recommended",
-      "prettier"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 2021
-    },
-    "plugins": [],
-    "ignorePatterns": ["src/plugins/*"],
-    "rules": {}
+  "root": true,
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": [
+    "plugin:vue/vue3-recommended",
+    "eslint:recommended",
+    "@vue/typescript/recommended",
+    "prettier"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2021
+  },
+  "plugins": [],
+  "ignorePatterns": [
+    "node_modules/*"
+  ],
+  "rules": {}
 }
