--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,8 +22,7 @@
     "pinia": "^2.1.7",
     "unplugin-auto-import": "^0.17.5",
     "vue": "3.4.15",
-    "vue-demi": "^0.14.7",
-    "vue-facing-decorator": "^3.0.4"
+    "vue-demi": "^0.14.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.15",
@@ -39,7 +38,7 @@
     "lint-staged": "^15.2.1",
     "prettier": "^3.2.4",
     "sass": "^1.70.0",
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.0",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
   }
