fix(client): eslint

--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -16,7 +16,9 @@
   },
   "plugins": [],
   "ignorePatterns": [
-    "node_modules/*"
+    "node_modules/",
+    "dist/",
+    "public/"
   ],
   "rules": {}
 }
