--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
   },
   "packageManager": "yarn@1.22.22",
   "dependencies": {
+    "@braks/revue-draggable": "^0.5.0",
     "@vueuse/core": "^10.7.2",
     "pinia": "^2.1.7",
     "unplugin-auto-import": "^0.17.5",
