--- a/packages/plugin/overlay-api/pom.xml
+++ b/packages/plugin/overlay-api/pom.xml
@@ -4,13 +4,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.overlay</groupId>
+        <groupId>io.github.brenoepics</groupId>
         <artifactId>retro-overlay</artifactId>
         <version>0.0.1</version>
     </parent>
 
     <artifactId>overlay-api</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>net.sf.trove4j</groupId>
+            <artifactId>trove4j</artifactId>
+            <version>3.0.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <directory>../target</directory>
