--- a/packages/plugin/pom.xml
+++ b/packages/plugin/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.overlay</groupId>
+    <groupId>io.github.brenoepics</groupId>
     <artifactId>retro-overlay</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
@@ -118,12 +118,6 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.brenoepics</groupId>
-            <artifactId>morningstar</artifactId>
-            <version>3-5-0</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
